fixing hero on mobile

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -51,6 +51,9 @@ h6 {
   min-height: 80vh;
   height: 90vh;
   color: $white;
+  @media (max-width: $smallbreakpoint) {
+    height: 75vh;
+  }
   & h1 {
     font-size: 87px;
     max-width: 50%;
